# soulfra

./: .env.example  .gitignore  ADAPTIVE_INTERFACE_INTEGRATION.md  ADVANCED_QR_FEATURES.md  AI-WORKFORCE-SYSTEM.md  AIO-PLATFORM-DESIGN.md  AI_DEBATE_SYSTEM_COMPLETE.md  AI_SETUP.md  ANKI_LEARNING_API_DOCS.md  API-GATEWAY.md  API_DOCUMENTATION.md  API_HEALTH_REPORT.json  API_KEY_SETUP.md  ARCHITECTURE-3WAY-FILTER-SYSTEM.md  ARCHITECTURE-CLARIFIED.md  ARCHITECTURE-EXPLAINED.md  ARCHITECTURE-VISUAL.md  ARCHITECTURE.md  ARCHITECTURE_EXPLAINED.md  ARCHITECTURE_MULTI_TIER.md  AUDIT_WHAT_WORKS.md  AUTO-BUILD-FROM-DOMAINS-TXT.md  AUTOMATION-AUDIT.md  AUTOMATION.md  AUTOMATION_COMPLETE.md  AUTOMATION_GUIDE.md  BODEGA_PAYMENT_SYSTEM.md  BRANDS.md  BRAND_ONBOARDING.md  BRAND_ROUTING_EXPLAINED.md  BUSINESS_QR_README.md  CALRIVEN_EXPLAINED.md  CANVAS_SYSTEM.md  CENTRAL_PLATFORM.md  CHANGELOG_2026-01-03.md  CLAUDE_API_INTEGRATION.md  CLEAN-RESTART.sh  CLEANUP_PLAN.md  CLOUD_DEPLOYMENT.md  COLLABORATION_GUIDE.md  (+928 more)
.cache/: content_hashes.json
Soulfra/: .pids  EXPOSE-TO-IPHONE.sh  README.md  START-ALL.sh  STOP-ALL.sh  TEST-FLOW.sh  generate-qr.py
assets/: README.md  qr-widget-template.md
blog/: feed.xml  index.html  test-post.html
brand_template/: README.md  brand.json  start.sh
cloudflare-worker/: payment-tracker.js  wrangler.toml
content/: test-post.md
core/: SIMPLE_DEMO.py  __init__.py  ad_injector.py  admin_system.py  api_server.py  audio_enhancer.py  audit_database.py  batch_import_posts.py  battle_routes.py  brand_builder.py  build_from_scratch.py  business_qr.py  content_generator.py  database.py  debug_affiliate_system.py  debug_lab.py  demo_user_journey.py  device_auth.py  dm_via_qr.py  docs_routes.py  domain_chatroom.py  domain_unlock_engine.py  domain_wordmap_aggregator.py  economy_mesh_network.py  enrich_content.py  export_brand_filesystem.py  export_voice_recordings.py  file_importer.py  fix_ip_storage.py  gallery_routes.py  generate_manifest.py  github_faucet.py  github_star_validator.py  init_business_db.py  init_learning_cards_for_user.py  init_voice_memos_federation.py  inspect-local-system.py  knowledge_extractor.py  lore_extraction_engine.py  make_it_automatic.py  (+31 more)
crypto_keys/: satoshi.public.txt
data/: expanded_vocabulary.json  stpetepros_embeddings.json
deploy/: README.md  (+9 more)
(+1195 files in other folders)
